--- a/index.html
+++ b/index.html
@@ -142,12 +142,12 @@
     }
 
     #cuando {
-      background-color: #BE1823; 
-      color: #f3b0b8;
+      background-color: #f3b0b8; 
+      color: #f6f4ef;
     }
 
     #cuando .detalles-titulo {
-      color: #f3b0b8;
+      color: #BE1823;
     }
     
     #donde {
@@ -205,7 +205,7 @@
     }
     
     #rsvp .detalles-titulo {
-      color: #111;
+      color: #BE1823;
     }
     .rsvp-contenido {
       display: flex;
@@ -484,6 +484,7 @@
   </script>
 </body>
 </html>
+
 
 
 
