--- a/index.html
+++ b/index.html
@@ -282,6 +282,16 @@
       display: block;
     }
 
+    /* SECCIÓN AVISO CONFIRMACIÓN */
+    #aviso-confirmacion {
+      background-color: #BE1823;
+      color: f6f4ef;
+      text-align: center;
+      padding: 3vh 2vw;
+      font-size: 1.4rem;
+      font-weight: bold;
+    }
+
     /* FOOTER */
     footer {
       background-color: #f6f4ef;
@@ -441,6 +451,11 @@
   </div>
 </section>
 
+  <!-- AVISO DE CONFIRMACIÓN -->
+  <section id="aviso-confirmacion">
+    <p><strong>POR FAVOR, CONFIRMAR ASISTENCIA ANTES DEL 16 DE DICIEMBRE</strong></p>
+  </section>
+
   <!-- DUDAS -->
   <section id="dudas">
     <h2>Dudas?</h2>
@@ -484,6 +499,7 @@
   </script>
 </body>
 </html>
+
 
 
 
