--- a/index.html
+++ b/index.html
@@ -367,10 +367,11 @@
     <div class="contenido donde-contenido">
       <div class="donde-texto">
         <h2 class="detalles-titulo">Dónde?</h2>
-        <p>
-          Elegimos <strong>Las Mercedes – Casa de Campo</strong> para celebrar rodeados de naturaleza.<br><br>
-          Dresscode recomendado: semi-formal, indie formal.
-        </p>
+        <p>Elegimos <strong>Las Mercedes – Casa de Campo</strong>, (Unquillo, Córdoba) para celebrar rodeados de naturaleza.</p>
+        <p>El salón cuenta con estacionamiento propio.<br>
+        Para facilitar el traslado, estamos organizando un servicio de transporte grupal ida y vuelta desde Córdoba Capital al evento (puntos de encuentro y precio a definir). Si estás interesadx, por favor responder en el formulario de RSVP.</p>
+        <p>Dresscode recomendado:<br>semi-formal, indie formal.</p>
+        
       </div>
       <div class="donde-mapa">
         <iframe
@@ -505,6 +506,7 @@
   </script>
 </body>
 </html>
+
 
 
 
