--- a/index.html
+++ b/index.html
@@ -244,23 +244,35 @@
 
     /* SECCIÓN REGISTRO (se mantiene como formulario en RSVP) */
     form input,
-    form select {
-      width: 100%;
-      padding: 0.5rem;
-      margin-bottom: 1rem;
-      font-size: 1rem;
-      border: none;
-      border-radius: 4px;
+    form select,
+    form textarea {
+      font-family: 'Montserrat', sans-serif;
+      font-size: 1.1rem;     /* más grande */
+      font-weight: 500;      /* semi-negrita */
+      color: #111;           /* color del texto */
+    }
+
+    form select option {
+      font-family: 'Montserrat', sans-serif;
+      font-size: 1.1rem;
+      font-weight: 400;
+      color: #111;
     }
 
     form button {
-      background-color: white;
-      color: #BE1823;
+      font-family: 'Cooper Black', serif; /* o Montserrat si preferís */
+      font-size: 1.2rem;
       font-weight: bold;
-      padding: 0.6rem 1.2rem;
+      background-color: #BE1823;
+      color: white;
+      padding: 0.8rem 1.6rem;
       border: none;
-      cursor: pointer;
-      border-radius: 4px;
+      border-radius: 6px;
+      transition: background-color 0.3s ease;
+    }
+
+    form button:hover {
+      background-color: #8f121a; /* un rojo más oscuro al pasar el mouse */
     }
 
     #confirmacion {
@@ -506,6 +518,7 @@
   </script>
 </body>
 </html>
+
 
 
 
