--- a/index.html
+++ b/index.html
@@ -247,28 +247,30 @@
     form select,
     form textarea {
       font-family: 'Montserrat', sans-serif;
-      font-size: 1.1rem;     /* más grande */
-      font-weight: 500;      /* semi-negrita */
+      font-size: 1rem;
+      font-weight: 1000;      /* negrita */
       color: #111;           /* color del texto */
+      padding: 0.8rem;        /* más espacio interno */
+      line-height: 1.2;       /* altura de línea */
     }
 
     form select option {
       font-family: 'Montserrat', sans-serif;
-      font-size: 1.1rem;
+      font-size: 1rem;
       font-weight: 400;
       color: #111;
     }
 
     form button {
       font-family: 'Cooper Black', serif; /* o Montserrat si preferís */
-      font-size: 1.2rem;
-      font-weight: bold;
+      font-size: 1.1rem;
       background-color: #BE1823;
       color: white;
       padding: 0.8rem 1.6rem;
       border: none;
-      border-radius: 6px;
+      border-radius: 5px;
       transition: background-color 0.3s ease;
+      
     }
 
     form button:hover {
@@ -518,6 +520,7 @@
   </script>
 </body>
 </html>
+
 
 
 
