--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
     #cuando {
       background-color: #f3b0b8; 
-      color: #f6f4ef;
+      color: #111;
     }
 
     #cuando .detalles-titulo {
@@ -236,6 +236,11 @@
       }
     }
 
+    .rsvp-form form {
+      max-width: 500px;   /* ancho máximo de la cajita */
+      margin: 0 auto;     /* centra el formulario */
+    }
+    
     #cuando p,
     #donde p,
     #rsvp p {
@@ -250,7 +255,8 @@
       font-size: 1rem;
       font-weight: 1000;      /* negrita */
       color: #111;           /* color del texto */
-      padding: 1.2rem;        /* más espacio interno */
+      padding: 0.8rem;
+      width: 100%; 
     }
 
     form select option {
@@ -261,7 +267,7 @@
     }
 
     form button {
-      font-family: 'Cooper Black', serif; /* o Montserrat si preferís */
+      font-family: 'Cooper Black', serif;
       font-size: 1.1rem;
       background-color: #BE1823;
       color: white;
@@ -269,11 +275,10 @@
       border: none;
       border-radius: 5px;
       transition: background-color 0.3s ease;
-      
     }
 
     form button:hover {
-      background-color: #8f121a; /* un rojo más oscuro al pasar el mouse */
+      background-color: #8f121a;
     }
 
     #confirmacion {
@@ -519,6 +524,7 @@
   </script>
 </body>
 </html>
+
 
 
 
