--- a/index.html
+++ b/index.html
@@ -202,6 +202,8 @@
     #rsvp {
       background-color: #f3b0b8; 
       color: #111;
+      padding-bottom: 0;
+      margin-bottom: 0;
     }
     
     #rsvp .detalles-titulo {
@@ -259,13 +261,13 @@
       max-width: 500px;         /* largo máximo, podés ajustarlo */
       box-sizing: border-box;   /* incluye padding y borde en el cálculo */
       padding: 0.8rem;
-      margin-bottom: 1rem;
+      margin-bottom: 0rem;
       font-family: 'Montserrat', sans-serif;
-      font-size: 1.1rem;
-      font-weight: 500;
+      font-size: 1rem;
+      font-weight: 1000;
       color: #111;
-      border: 1px solid #ccc;   /* mismo borde para todos */
-      border-radius: 6px;
+      border: none;
+      border-radius: 5px;
       background-color: #fff;
     }
 
@@ -507,7 +509,7 @@
 
   <!-- FOOTER -->
   <footer>
-    <p>Con todo nuestro amor, <strong>Iara & Imanol</strong></p>
+    <p>Con todo nuestro amor, <br><strong>Iara & Imanol</strong></p>
   </footer>
 
   <!-- SCRIPTS -->
@@ -540,6 +542,7 @@
   </script>
 </body>
 </html>
+
 
 
 
