--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     
     .donde-contenido {
       display: flex;
-      align-items: flex-start;
+      align-items: center;
       justify-content: space-between;
       gap: 2rem;
       max-width: 1000px;
@@ -558,3 +558,4 @@
   </script>
 </body>
 </html>
+
