--- a/index.html
+++ b/index.html
@@ -191,9 +191,9 @@
     
     .subtitulo-donde {
       font-family: 'Montserrat', sans-serif;
-      font-size: 1.3rem;
+      font-size: 1.5rem;
       font-weight: bold;
-      color: #111;
+      color: #f3b0b8;
       margin-top: 1.5rem;
       margin-bottom: 0.5rem;
       text-align: left; /* mantiene la alineación con el párrafo */
@@ -551,5 +551,6 @@
   </script>
 </body>
 </html>
+
 
 
