--- a/index.html
+++ b/index.html
@@ -170,11 +170,11 @@
     }
 
     .donde-texto {
-      flex: 0 0 50%;
+      flex: 0 0 40%;
     }
 
     .donde-mapa {
-      flex: 0 0 45%;
+      flex: 0 0 50%;
     }
 
     @media (max-width: 768px) {
@@ -410,8 +410,8 @@
       <p>Elegimos <strong>Las Mercedes – Casa de Campo</strong> (Unquillo, Córdoba) para celebrar rodeados de naturaleza.</p>
 
       <h3 class="subtitulo-donde">Transporte</h3>
-      <p>El salón cuenta con estacionamiento propio.<br>
-      Para facilitar el traslado, estamos organizando un servicio de transporte grupal ida y vuelta desde Córdoba Capital al evento (puntos de encuentro y precio a definir). Si estás interesadx, por favor responder en el <a href="#rsvp">formulario de RSVP</a>.</p>
+      <p>El salón cuenta con estacionamiento propio.</p>
+      <p>Para facilitar el traslado, estamos organizando un servicio de transporte grupal ida y vuelta desde Córdoba Capital al evento (puntos de encuentro y precio a definir). Si estás interesadx, por favor responder en el <a href="#rsvp">formulario de RSVP</a>.</p>
 
       <h3 class="subtitulo-donde">Dresscode</h3>
       <p>Semi-formal, indie formal.</p>
@@ -551,6 +551,7 @@
   </script>
 </body>
 </html>
+
 
 
 
