--- a/index.html
+++ b/index.html
@@ -492,8 +492,8 @@
         <div class="rsvp-texto">
           <p>Hace <span id="contador"></span> que más de 12.952 km nos separan.<br>
           Para nosotros esto no es simplemente un casamiento: es la posibilidad y la apuesta a un futuro juntos.<br>
-          Debido a nuestra situación, no necesitamos regalos materiales, lo único que queremos es poder volver a vivir en el mismo lugar.</p>
-          <p>La tarjeta es la forma que encontramos de hacer posible esta fiesta y de ayudarnos a transformar ese deseo en realidad.</p>
+          Debido a nuestra situación, no necesitamos regalos materiales, lo único que queremos es poder volver a vivir en el mismo lugar y festejar este paso que estamos dando con ustedes.</p>
+          <p>La tarjeta es la forma que encontramos de transformar ese deseo en realidad.</p>
           <p></p><strong>Mayores:</strong> $65.000 | <strong>Niñxs 5 a 12:</strong> $35.000 | <strong>0 a 4:</strong> invitadxs</p>
         <img src="qr.png" alt="Código QR" style="max-width:200px;">
         <p>Alias: XXXXX.XXXX.XXX</p>
@@ -551,6 +551,7 @@
   </script>
 </body>
 </html>
+
 
 
 
