--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Iara & Imanol</title>
   
   <!-- Desde Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;700&display=swap" rel="stylesheet">
 
   <style>
     /* TIPOGRAFÍAS */
@@ -19,13 +19,13 @@
 
     body {
       margin: 0;
-      font-family: 'Roboto', sans-serif;
+      font-family: 'Quicksand', sans-serif;
       background-color: #F8F9FC;
       color: #111;
       font-size: 20px;
       overflow-x: hidden;
     }
-    
+
     /* HEADER */
     header {
       position: fixed;
@@ -551,6 +551,7 @@
   </script>
 </body>
 </html>
+
 
 
 
