--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 
     
     .subtitulo-donde {
-      font-family: 'Montserrat', sans-serif;
+      font-family: 'Quicksand', sans-serif;
       font-size: 1.5rem;
       font-weight: bold;
       color: #f3b0b8;
@@ -551,6 +551,7 @@
   </script>
 </body>
 </html>
+
 
 
 
