--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     /* TIPOGRAFÍAS */
     @font-face {
       font-family: 'Cooper Black';
-      src: url('CooperBlack.ttf') format('truetype');
+      src: url('CooperBlack.woff2') format('woff2'),
+           url('CooperBlack.woff') format('woff'),
+           url('CooperBlack.ttf') format('truetype');
       font-weight: normal;
       font-style: normal;
     }
@@ -551,6 +553,7 @@
   </script>
 </body>
 </html>
+
 
 
 
