--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
     .imagen-intermedia {
       width: 100%;
-      height: 400px; /* o el alto que quieras mantener fijo */
+      height: clamp(350px, 40vh, 500px);
       overflow: hidden; /* oculta lo que sobresale */
     }
 
@@ -551,6 +551,7 @@
   </script>
 </body>
 </html>
+
 
 
 
