--- a/index.html
+++ b/index.html
@@ -397,6 +397,7 @@
   <!-- GIF CALENDARIO -->
   <div class="gif-calendario">
     <img src="calendario.gif" alt="Calendario" />
+  </div>
 
   <!-- SECCIÓN NOSOTROS -->
   <section id="nosotros">
@@ -576,6 +577,7 @@
   </script>
 </body>
 </html>
+
 
 
 
