--- a/index.html
+++ b/index.html
@@ -170,7 +170,12 @@
     #cuando .detalles-titulo {
       color: #BE1823;
     }
-    
+
+    #cuando h2.detalles-titulo {
+      margin-bottom: 0;   /* 👈 elimina el espacio bajo el título */
+      padding-bottom: 0;  /* 👈 elimina espacio interno si lo tuviera */
+    }
+
     #donde {
       background-color: #f6f4ef; 
       color: #111;
@@ -577,6 +582,7 @@
   </script>
 </body>
 </html>
+
 
 
 
