--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     }
 
     header a:hover {
-      color: #f3b0b8;
+      color: #f9cbd0;
     }
 
     /* CONTENEDORES */
@@ -161,7 +161,7 @@
     }
 
     #cuando {
-      background-color: #f3b0b8; 
+      background-color: #f9cbd0; 
       color: #111;
       padding-bottom: 0; /* 👈 saca espacio interno inferior */
       margin-bottom: 0;  /* 👈 saca espacio externo inferior */
@@ -182,7 +182,7 @@
     }
 
     #donde .detalles-titulo {
-      color: #f3b0b8;
+      color: #f9cbd0;
     }
     
     .donde-contenido {
@@ -218,14 +218,14 @@
       font-family: 'Quicksand', sans-serif;
       font-size: 1.5rem;
       font-weight: bold;
-      color: #f3b0b8;
+      color: #f9cbd0;
       margin-top: 1.5rem;
       margin-bottom: 0.5rem;
       text-align: left; /* mantiene la alineación con el párrafo */
     }
 
     #rsvp {
-      background-color: #f3b0b8; 
+      background-color: #f9cbd0; 
       color: #111;
       padding-bottom: 0;
       margin-bottom: 0;
@@ -340,7 +340,7 @@
 
     /* SECCIÓN AVISO CONFIRMACIÓN */
     #aviso-confirmacion {
-      background-color: #f3b0b8;
+      background-color: #f9cbd0;
       color: #BE1823;
       text-align: center;
       padding: 1vh 2vw;
@@ -582,6 +582,7 @@
   </script>
 </body>
 </html>
+
 
 
 
