--- a/index.html
+++ b/index.html
@@ -177,12 +177,12 @@
     }
 
     #donde {
-      background-color: #f6f4ef; 
-      color: #111;
+      background-color: #BE1823; 
+      color: #f6f4ef;
     }
 
     #donde .detalles-titulo {
-      color: #f9cbd0;
+      color: #f6f4ef;
     }
     
     .donde-contenido {
@@ -218,7 +218,7 @@
       font-family: 'Quicksand', sans-serif;
       font-size: 1.5rem;
       font-weight: bold;
-      color: #f9cbd0;
+      color: #f6f4ef;
       margin-top: 1.5rem;
       margin-bottom: 0.5rem;
       text-align: left; /* mantiene la alineación con el párrafo */
@@ -582,6 +582,7 @@
   </script>
 </body>
 </html>
+
 
 
 
