--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     /* TITULO PRINCIPAL */
     .titulo-central {
       font-family: 'Cooper Black', serif;
-      font-size: clamp(4rem, 8vw, 6rem);
+      font-size: clamp(4rem, 8vw, 5rem);
       color: #be1e28;
       text-align: center;
       line-height: 0.75;
@@ -104,7 +104,7 @@
     /* GIF CALENDARIO */
     .gif-calendario {
       width: 100%;
-      height: clamp(300px, 60vh, 600px); /* alto fijo y responsive */
+      height: clamp(150px, 60vh, 200px); /* alto fijo y responsive */
       display: flex;
       justify-content: center;
       align-items: center;
@@ -140,7 +140,7 @@
 
     .imagen-intermedia {
       width: 100%;
-      height: clamp(450px, 40vh, 500px);
+      height: clamp(600px, 40vh, 600px);
       overflow: hidden; /* oculta lo que sobresale */
     }
 
@@ -181,8 +181,8 @@
     }
 
     #cuando h2.detalles-titulo {
-      margin-bottom: 0;   /* 👈 elimina el espacio bajo el título */
-      padding-bottom: 0;  /* 👈 elimina espacio interno si lo tuviera */
+      margin-bottom: 0;
+      padding-bottom: 0;
     }
 
     #donde {
@@ -547,13 +547,13 @@
   <section id="dudas">
     <h2>Dudas?</h2>
     <p>Si tenes alguna duda o necesitás ayuda, escribinos!</p>
-    <p><strong>Iara:</strong> <a href="https://api.whatsapp.com/send/?phone=543516074183" target="_blank">Whatsapp</a></p>
-    <p><strong>Imanol:</strong> <a href="https://api.whatsapp.com/send/?phone=543516074183" target="_blank">Whatsapp</a></p>
+    <p><strong>Iara:</strong> <a href="https://api.whatsapp.com/send/?phone=543516074183" target="_blank">Whatsapp</a><b>
+    <strong>Imanol:</strong> <a href="https://api.whatsapp.com/send/?phone=543516074183" target="_blank">Whatsapp</a></p>
   </section>
 
   <!-- FOOTER -->
   <footer>
-    <p>Página diseñada por 123iamela & Surdito Bagre, <b>con todo nuestro amor.</p>
+    <p>Página diseñada por 123iamela & Surdito Bagre, con todo nuestro amor.</p>
   </footer>
 
   <!-- SCRIPTS -->
@@ -586,3 +586,4 @@
   </script>
 </body>
 </html>
+
