--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
 
     @media (max-width: 768px) {
       .gif-fondo {
-        height: 50vh;   /* ocupa casi toda la pantalla */
-        max-height: none; /* anula el límite anterior */
+        height: 30vh;
+        max-height: none;
     }
 
     .gif-fondo img {
@@ -593,6 +593,7 @@
   </script>
 </body>
 </html>
+
 
 
 
