--- a/index.html
+++ b/index.html
@@ -95,6 +95,12 @@
       animation-delay: 0.3s;
     }
 
+    @media (max-width: 768px) {
+      .gif-fondo {
+        height: 40vh;
+        max-height: none;
+    }
+
     .gif-fondo img {
       width: 100%;
       height: auto;
@@ -113,18 +119,17 @@
     }
 
     @media (max-width: 768px) {
-      .gif-fondo {
+      .gif-calendario {
         height: 30vh;
         max-height: none;
     }
 
-    .gif-fondo img {
+    .gif-calendario img {
         object-fit: cover; /* se adapta al alto */
         width: 100%;
         height: 100%;
       }
     }
-
 
     /* TITULOS SECCIONES */
     h2 {
@@ -593,6 +598,7 @@
   </script>
 </body>
 </html>
+
 
 
 
