--- a/index.html
+++ b/index.html
@@ -118,11 +118,12 @@
       justify-content: center;
       align-items: center;
       overflow: hidden;
+      margin: 0;
     }
 
     .gif-calendario img {
       width: 100%;
-      height: auto;
+      height: 100%;
       object-fit: cover;
     }
 
@@ -200,6 +201,11 @@
       color: #BE1823;
     }
 
+    #cuando h2.detalles-titulo { 
+      margin-bottom: 0; 
+      padding-bottom: 0; 
+    }
+    
     #donde {
       background-color: #BE1823; 
       color: #f6f4ef;
@@ -575,3 +581,4 @@
   </script>
 </body>
 </html>
+
