--- a/index.html
+++ b/index.html
@@ -191,6 +191,8 @@
     #cuando {
       background-color: #f9cbd0; 
       color: #111;
+      padding: 0;
+      margin: 0;
     }
 
     #cuando .detalles-titulo {
@@ -200,6 +202,17 @@
     #cuando h2.detalles-titulo { 
       margin-bottom: 0; 
       padding-bottom: 0; 
+    }
+    
+    #cuando .gif-calendario {
+      margin: 0;
+      padding: 0;
+    }
+
+    #cuando .gif-calendario img {
+      display: block;     /* elimina espacio fantasma abajo del img */
+      width: 100%;        /* ocupa todo el ancho */
+      height: auto;       /* mantiene proporción */
     }
     
     #donde {
@@ -577,5 +590,6 @@
   </script>
 </body>
 </html>
+
 
 
