--- a/index.html
+++ b/index.html
@@ -199,6 +199,13 @@
       color: #BE1823;
     }
 
+    /* Espaciado SOLO para el título y texto */
+    #cuando h2, 
+    #cuando p {
+      margin-top: 40px;   /* espacio arriba */
+      text-align: center;
+    }
+    
     #cuando h2.detalles-titulo { 
       margin-bottom: 0; 
       padding-bottom: 0; 
@@ -210,9 +217,11 @@
     }
 
     #cuando .gif-calendario img {
-      display: block;     /* elimina espacio fantasma abajo del img */
-      width: 100%;        /* ocupa todo el ancho */
-      height: auto;       /* mantiene proporción */
+      display: block;
+      width: 100%;
+      height: auto;
+      margin: 0;
+      padding: 0;
     }
     
     #donde {
@@ -590,6 +599,7 @@
   </script>
 </body>
 </html>
+
 
 
 
