--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
     @media (max-width: 768px) {
       .gif-calendario {
         height: 31vh;
+        max-height: none;
       }
     }
 
@@ -191,8 +192,8 @@
     #cuando {
       background-color: #f9cbd0; 
       color: #111;
-      padding: 0;
-      margin: 0;
+      padding-bottom: 0;
+      margin-bottom: 0;
     }
 
     #cuando .detalles-titulo {
@@ -212,14 +213,6 @@
     }
     
     #cuando .gif-calendario {
-      margin: 0;
-      padding: 0;
-    }
-
-    #cuando .gif-calendario img {
-      display: block;
-      width: 100%;
-      height: auto;
       margin: 0;
       padding: 0;
     }
@@ -599,6 +592,7 @@
   </script>
 </body>
 </html>
+
 
 
 
