--- a/index.html
+++ b/index.html
@@ -215,6 +215,8 @@
     #cuando .gif-calendario {
       margin: 0;
       padding: 0;
+      width: 100vw;
+      max-width: none; 
     }
     
     #donde {
@@ -268,6 +270,8 @@
       max-width: 1000px;
       margin: 0 auto;
       text-align: justify;
+      padding-bottom: 0;
+      margin-bottom: 0;
     }
 
     .rsvp-form {
@@ -461,6 +465,9 @@
         <h3 class="subtitulo-donde">Transporte</h3>
         <p>El salón cuenta con estacionamiento propio.</p>
         <p>Estamos organizando transporte grupal ida y vuelta desde Córdoba Capital (puntos de encuentro y precio a definir). Si estás interesadx, por favor respondé en el <a href="#rsvp">formulario de RSVP</a>.</p>
+
+        <h3 class="subtitulo-donde">Dresscode</h3> 
+        <p>Semi-formal, indie formal.</p>
       </div>
 
       <div class="donde-mapa">
@@ -537,7 +544,7 @@
           <p>La tarjeta es la forma que encontramos de transformar ese deseo en realidad.</p>
           <p><strong>Mayores:</strong> $65.000 | <strong>Niñxs 5 a 12:</strong> $35.000 | <strong>0 a 4:</strong> invitadxs</p>
           <img src="qr.png" alt="Código QR" style="max-width:200px;">
-          <p>Alias: XXXXX.XXXX.XXX</p>
+          <p>Alias: ahre.seca.saban</p>
           <p>Muchas gracias por acompañarnos, por hacer este día posible y por acercarnos un poco más a nuestro sueño.</p>
         </div>
       </div> 
@@ -592,8 +599,3 @@
   </script>
 </body>
 </html>
-
-
-
-
-
