--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
   <section id="dudas">
     <h2>Dudas?</h2>
     <p>Si tenés alguna duda o necesitás ayuda, escribinos:</p>
-    <p><strong>Iara:</strong> <a href="https://api.whatsapp.com/send/?phone=543516074183" target="_blank">Whatsapp</a><b>
+    <p><strong>Iara:</strong> <a href="https://api.whatsapp.com/send/?phone=543516074183" target="_blank">Whatsapp</a><br>
     <strong>Imanol:</strong> <a href="https://api.whatsapp.com/send/?phone=543516074183" target="_blank">Whatsapp</a></p>
   </section>
 
@@ -599,3 +599,4 @@
   </script>
 </body>
 </html>
+
