--- a/index.html
+++ b/index.html
@@ -194,6 +194,8 @@
       color: #111;
       padding-bottom: 0;
       margin-bottom: 0;
+      padding: 0;
+
     }
 
     #cuando .detalles-titulo {
@@ -215,8 +217,15 @@
     #cuando .gif-calendario {
       margin: 0;
       padding: 0;
-      width: 100vw;
+      width: 100%;
       max-width: none; 
+    }
+
+    #cuando .gif-calendario img {
+      display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
     
     #donde {
@@ -256,6 +265,8 @@
     #rsvp {
       background-color: #f9cbd0; 
       color: #111;
+      margin-bottom: 0;
+      padding-bottom: 0;
     }
     
     #rsvp .detalles-titulo {
@@ -369,10 +380,12 @@
       background-color: #f9cbd0;
       color: #BE1823;
       text-align: center;
-      padding: 1vh 2vw;
       font-size: 1.5rem;
+      margin-top: 0;
+      padding-top: 0;
     }
 
+    /*padding: 1vh 2vw;*/
     /* ==============================
        DUDAS
     ============================== */
@@ -599,4 +612,5 @@
   </script>
 </body>
 </html>
+
 
