--- a/index.html
+++ b/index.html
@@ -210,9 +210,9 @@
     }
     
     #cuando h2.detalles-titulo { 
+      margin-top: 2rem;
       margin-bottom: 0; 
       padding-bottom: 0;
-      margin: 0;
     }
     
     #cuando .gif-calendario {
@@ -618,6 +618,7 @@
   </script>
 </body>
 </html>
+
 
 
 
