--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     }
 
     header a:hover {
-      color: #F8F9FC;
+      color: #F9CBD0;
     }
 
     /* ==============================
@@ -113,7 +113,7 @@
     ============================== */
     .gif-calendario {
       width: 100%;
-      height: clamp(600px, 50vh, 700px);
+      height: clamp(650px, 30vh, 700px);
       display: flex;
       justify-content: center;
       align-items: center;
@@ -213,6 +213,7 @@
       margin-top: 2rem;
       margin-bottom: 0; 
       padding-bottom: 0;
+      margin: 0;
     }
     
     #cuando .gif-calendario {
@@ -618,6 +619,7 @@
   </script>
 </body>
 </html>
+
 
 
 
