--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     }
 
     main#inicio {
-      margin-top: 80px; /* compensar header fijo */
+      margin-top: 80px;
     }
 
     /* ==============================
@@ -113,7 +113,7 @@
     ============================== */
     .gif-calendario {
       width: 100%;
-      height: clamp(650px, 30vh, 700px);
+      height: clamp(400px, 30vh, 500px);
       display: flex;
       justify-content: center;
       align-items: center;
@@ -140,7 +140,7 @@
     h2 {
       font-family: 'Cooper Black', serif;
       font-size: clamp(2rem, 6vw, 4rem);
-      margin: 0 0 2rem;
+      margin: 2rem 0 2rem;
     }
 
     /* ==============================
@@ -619,6 +619,7 @@
   </script>
 </body>
 </html>
+
 
 
 
