--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     h2 {
       font-family: 'Cooper Black', serif;
       font-size: clamp(2rem, 6vw, 4rem);
-      margin: 2rem 0 2rem;
+      margin: 0 0 2rem;
     }
 
     /* ==============================
@@ -207,13 +207,6 @@
     #cuando p {
       margin-top: 40px;   /* espacio arriba */
       text-align: center;
-    }
-    
-    #cuando h2.detalles-titulo { 
-      margin-top: 2rem;
-      margin-bottom: 0; 
-      padding-bottom: 0;
-      margin: 0;
     }
     
     #cuando .gif-calendario {
@@ -619,6 +612,7 @@
   </script>
 </body>
 </html>
+
 
 
 
