--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
     #cuando {
       background-color: #f9cbd0; 
       color: #111;
+      margin: 0;
     }
 
     #cuando .detalles-titulo {
@@ -587,6 +588,7 @@
   </script>
 </body>
 </html>
+
 
 
 
