--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
       background-color: #f9cbd0; 
       color: #111;
       padding: 0;
+      padding-top: 2rem;
     }
 
     #cuando .detalles-titulo {
@@ -588,6 +589,7 @@
   </script>
 </body>
 </html>
+
 
 
 
