--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     ============================== */
     .gif-calendario {
       width: 100%;
-      height: clamp(100px, 55vh, 700px);
+      height: clamp(100px, 51vh, 700px);
       display: flex;
       justify-content: center;
       align-items: center;
@@ -193,7 +193,7 @@
       background-color: #f9cbd0; 
       color: #111;
       padding: 0;
-      padding-top: 2rem;
+      padding-top: 2.5rem;
     }
 
     #cuando .detalles-titulo {
@@ -302,7 +302,7 @@
       width: 100%;
       max-width: 500px;
       padding: 0.6rem;
-      margin-bottom: 0.4rem;
+      margin-bottom: 0.6rem;
       font-family: 'Quicksand', sans-serif;
       font-size: 0.9rem;
       color: #111;
@@ -534,7 +534,7 @@
           <p>La tarjeta es la forma que encontramos de transformar ese deseo en realidad.</p>
           <p><strong>Mayores:</strong> $65.000 | <strong>Niñxs 5 a 12:</strong> $35.000 | <strong>0 a 4:</strong> invitadxs</p>
           <img src="qr.jpg" alt="Código QR" style="max-width:200px;">
-          <p>Alias: ahre.seca.saban</p>
+          <p><strong>Alias: ahre.seca.saban</strong></p>
           <p>Muchas gracias por acompañarnos, por hacer este día posible y por acercarnos un poco más a nuestro sueño.</p>
         </div>
       </div> 
@@ -589,6 +589,7 @@
   </script>
 </body>
 </html>
+
 
 
 
