--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
         <p>Estamos organizando transporte grupal ida y vuelta desde Córdoba Capital (puntos de encuentro y precio a definir). Si estás interesadx, por favor respondé en el <a href="#rsvp">formulario de RSVP</a>.</p>
 
         <h3 class="subtitulo-donde">Dresscode</h3> 
-        <p>Semi-formal, indie formal.</p>
+        <p>Semi-formal, indie-formal.</p>
       </div>
 
       <div class="donde-mapa">
@@ -533,7 +533,7 @@
           Debido a nuestra situación, no necesitamos regalos materiales, lo único que queremos es poder volver a vivir en el mismo lugar y festejar este paso que estamos dando con ustedes.</p>
           <p>La tarjeta es la forma que encontramos de transformar ese deseo en realidad.</p>
           <p><strong>Mayores:</strong> $65.000 | <strong>Niñxs 5 a 12:</strong> $35.000 | <strong>0 a 4:</strong> invitadxs</p>
-          <img src="qr.jpg" alt="Código QR" style="max-width:200px;">
+          <img src="qr.jpg" alt="Código QR" style="display: block; margin: 0 auto; max-width: 200px;">
           <p><strong>Alias: ahre.seca.saban</strong></p>
           <p>Muchas gracias por acompañarnos, por hacer este día posible y por acercarnos un poco más a nuestro sueño.</p>
         </div>
@@ -589,6 +589,7 @@
   </script>
 </body>
 </html>
+
 
 
 
