--- a/index.html
+++ b/index.html
@@ -532,9 +532,11 @@
           Para nosotros esto no es simplemente un casamiento: es la posibilidad y la apuesta a un futuro juntos.<br>
           Debido a nuestra situación, no necesitamos regalos materiales, lo único que queremos es poder volver a vivir en el mismo lugar y festejar este paso que estamos dando con ustedes.</p>
           <p>La tarjeta es la forma que encontramos de transformar ese deseo en realidad.</p>
-          <p><strong>Mayores:</strong> $65.000 | <strong>Niñxs 5 a 12:</strong> $35.000 | <strong>0 a 4:</strong> invitadxs</p>
+          <p style="text-align: center;><strong>Mayores:</strong> $65.000 <br> 
+            <strong>Niñxs 5 a 12:</strong> $35.000 <br>
+            <strong>Niñxs 0 a 4:</strong> invitadxs</p>
           <img src="qr.jpg" alt="Código QR" style="display: block; margin: 0 auto; max-width: 200px;">
-          <p><strong>Alias: ahre.seca.saban</strong></p>
+          <p style="text-align: center;"><strong>Alias: ahre.seca.saban</strong></p>
           <p>Muchas gracias por acompañarnos, por hacer este día posible y por acercarnos un poco más a nuestro sueño.</p>
         </div>
       </div> 
@@ -589,6 +591,7 @@
   </script>
 </body>
 </html>
+
 
 
 
