--- a/index.html
+++ b/index.html
@@ -532,8 +532,8 @@
           Para nosotros esto no es simplemente un casamiento: es la posibilidad y la apuesta a un futuro juntos.<br>
           Debido a nuestra situación, no necesitamos regalos materiales, lo único que queremos es poder volver a vivir en el mismo lugar y festejar este paso que estamos dando con ustedes.</p>
           <p>La tarjeta es la forma que encontramos de transformar ese deseo en realidad.</p>
-          <p style="text-align: center;><strong>Mayores:</strong> $65.000 <br> 
-            <strong>Niñxs 5 a 12:</strong> $35.000 <br>
+          <p style="text-align: center;"><strong>Mayores:</strong> $65.000<br> 
+            <strong>Niñxs 5 a 12:</strong> $35.000<br>
             <strong>Niñxs 0 a 4:</strong> invitadxs</p>
           <img src="qr.jpg" alt="Código QR" style="display: block; margin: 0 auto; max-width: 200px;">
           <p style="text-align: center;"><strong>Alias: ahre.seca.saban</strong></p>
@@ -591,18 +591,3 @@
   </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
