--- a/index.html
+++ b/index.html
@@ -304,7 +304,8 @@
       padding: 1rem;
       margin-bottom: 0.8rem;
       font-family: 'Quicksand', sans-serif;
-      font-size: 0.9rem;
+      font-size: 1rem;
+      font-weight: 600;
       color: #111;
       border: none;
       border-radius: 5px;
@@ -591,5 +592,6 @@
   </script>
 </body>
 </html>
+
 
 
