--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       width: 100%;
       z-index: 1000;
       background: #BE1823;
-      padding: 0.8rem;
+      padding: 1rem 5vw;
       text-align: center;
       box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
     }
@@ -50,7 +50,7 @@
       color: white;
       text-decoration: none;
       margin: 0 1rem;
-      font-size: 1rem;
+      font-size: 1.2rem;
       font-weight: bold;
       transition: color 0.3s ease;
     }
@@ -592,6 +592,7 @@
   </script>
 </body>
 </html>
+
 
 
 
