--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       width: 100%;
       z-index: 1000;
       background: #BE1823;
-      padding: 1rem 5vw;
+      padding: 0.8rem;
       text-align: center;
       box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
     }
@@ -592,6 +592,7 @@
   </script>
 </body>
 </html>
+
 
 
 
