--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
 
         <h3 class="subtitulo-donde">Transporte</h3>
         <p>El salón cuenta con estacionamiento propio.</p>
-        <p>Estamos organizando transporte grupal ida y vuelta desde Córdoba Capital (puntos de encuentro y precio a definir). Si estás interesadx, por favor respondé en el <a href="#rsvp">formulario de RSVP</a>.</p>
+        <p>Por otro lado, estamos organizando transporte grupal ida y vuelta desde Córdoba Capital (puntos de encuentro y precio a definir). Si estás interesadx, por favor respondé en el <a href="#rsvp">formulario de RSVP</a>.</p>
 
         <h3 class="subtitulo-donde">Dresscode</h3> 
         <p>Semi-formal, indie-formal.</p>
@@ -537,7 +537,11 @@
             <strong>Niñxs 5 a 12:</strong> $35.000<br>
             <strong>Niñxs 0 a 4:</strong> invitadxs</p>
           <img src="qr.jpg" alt="Código QR" style="display: block; margin: 0 auto; max-width: 200px;">
-          <p style="text-align: center;"><strong>Alias: ahre.seca.saban</strong></p>
+          <p style="text-align: center;"><strong>Alias: ahre.seca.saban</strong><br> 
+          Nombre completo: Iara Diamela Rodriguez<br> 
+          Banco: Brubank<br> 
+          Nº de cuenta: 1300232378001<br> 
+          CUIT: 27-36930450-5<br> </p>
           <p>Muchas gracias por acompañarnos, por hacer este día posible y por acercarnos un poco más a nuestro sueño.</p>
         </div>
       </div> 
@@ -546,7 +550,7 @@
 
   <!-- AVISO DE CONFIRMACIÓN -->
   <section id="aviso-confirmacion">
-    <p>Por favor, confirmar asistencia antes del <strong>10 de diciembre</strong>.</p>
+    <p>Por favor, confirmar asistencia y abonar la tarjeta antes del <strong>10 de diciembre</strong>.</p>
   </section>
 
   <!-- DUDAS -->
@@ -592,3 +596,4 @@
   </script>
 </body>
 </html>
+
