--- a/index.html
+++ b/index.html
@@ -538,11 +538,11 @@
             <strong>Niñxs 0 a 4:</strong> invitadxs</p>
           <img src="qr.jpg" alt="Código QR" style="display: block; margin: 0 auto; max-width: 200px;">
           <p style="text-align: center;"><strong>Alias: ahre.seca.saban</strong><br> 
-          Nombre completo: Iara Diamela Rodriguez<br> 
-          Banco: Brubank<br> 
+          Nombre: Iara Diamela Rodriguez<br> 
           Nº de cuenta: 1300232378001<br> 
-          CUIT: 27-36930450-5<br> </p>
-          <p>Muchas gracias por acompañarnos, por hacer este día posible y por acercarnos un poco más a nuestro sueño.</p>
+          CUIT: 27-36930450-5<br>
+          Banco: Brubank<br></p>
+          <p>Muchas gracias por acompañarnos, por hacer este día posible y por acercarnos un poco.</p>
         </div>
       </div> 
     </div> 
@@ -596,4 +596,5 @@
   </script>
 </body>
 </html>
+
 
