--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
             <strong>Niñxs 5 a 12:</strong> $35.000<br>
             <strong>Niñxs 0 a 4:</strong> invitadxs</p>
           <img src="qr.jpg" alt="Código QR" style="display: block; margin: 0 auto; max-width: 200px;">
-          <p style="text-align: center;"><strong>Alias: ahre.seca.saban</strong><br> 
+          <p style="text-align: center;"><strong>Alias: ahre.secasa.ban</strong><br> 
           Nombre: Iara Diamela Rodriguez<br> 
           Nº de cuenta: 1300232378001<br> 
           CUIT: 27-36930450-5<br>
@@ -596,6 +596,7 @@
   </script>
 </body>
 </html>
+
 
 
 
