--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
 
       <div class="donde-mapa">
         <iframe
-          src="https://www.google.com/maps?q=Las+Mercedes+470,+Unquillo,+Córdoba,+Argentina&output=embed"
+          src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d717.0529423553754!2d-64.29813215261633!3d-31.25125119788811!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x943282db9d0f75cf%3A0x45e1ebeff49179d6!2sLas%20Mercedes%20Eventos!5e0!3m2!1sen!2sus!4v1758184123138!5m2!1sen!2sus"
           width="100%"
           height="550"
           style="border:0;"
@@ -596,6 +596,7 @@
   </script>
 </body>
 </html>
+
 
 
 
