--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
         <h2 class="detalles-titulo">Dónde?</h2>
 
         <h3 class="subtitulo-donde">El lugar</h3>
-        <p>Elegimos <strong>Las Mercedes – Casa de Campo</strong> (Unquillo, Córdoba) para celebrar rodeados de naturaleza.</p>
+        <p>Elegimos <strong>Las Mercedes – Casa de Campo</strong> (Las Mercedes 470, Unquillo, Córdoba) para celebrar rodeados de naturaleza.</p>
 
         <h3 class="subtitulo-donde">Transporte</h3>
         <p>El salón cuenta con estacionamiento propio.</p>
@@ -596,6 +596,7 @@
   </script>
 </body>
 </html>
+
 
 
 
