--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       font-family: 'Quicksand', sans-serif;
       background-color: #F8F9FC;
       color: #111;
-      font-size: 20px;
+      font-size: clamp(2rem, 6vw, 3rem);
       font-weight: 500;
       overflow-x: hidden;
     }
@@ -421,7 +421,8 @@
     <div class="contenido">
       <h2>Nuestra historia</h2>
       <p>
-        Nuestra historia no es una de cuentos. Lo nuestro siempre fue más de las palabras afiladas que lo del amor a primera vista.<br>
+        Nuestra historia no es una de cuentos. <br>
+        Lo nuestro siempre fue más de las palabras afiladas que lo del amor a primera vista.<br>
         Nos conocimos, nos desconocimos y aprendimos a volver a conocernos.<br>
         Discutimos, pensamos juntos, nos desafiamos, y en el medio de todo eso, nos elegimos.<br>
         Decidimos casarnos, no por protocolo, sino porque queremos vivir juntos, donde sea.<br>
@@ -596,6 +597,7 @@
   </script>
 </body>
 </html>
+
 
 
 
