--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
   <section id="cuando">
     <h2 class="detalles-titulo">Cuándo?</h2>
     <div class="gif-calendario">
-      <img src="calendario.gif" alt="Calendario" />
+      <img src="calendario1.gif" alt="Calendario" />
     </div>
   </section>
   
@@ -597,6 +597,7 @@
   </script>
 </body>
 </html>
+
 
 
 
