--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       font-family: 'Quicksand', sans-serif;
       background-color: #F8F9FC;
       color: #111;
-      font-size: clamp(2rem, 6vw, 3rem);
+      font-size: 20px;
       font-weight: 500;
       overflow-x: hidden;
     }
@@ -597,6 +597,7 @@
   </script>
 </body>
 </html>
+
 
 
 
