--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     }
     
     #donde {
-      background-color: #BE1823; 
+      background-color: #c00b03; 
       color: #f6f4ef;
     }
 
@@ -597,6 +597,7 @@
   </script>
 </body>
 </html>
+
 
 
 
