--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     }
     
     #donde {
-      background-color: #c00b03; 
+      background-color: #BE1823; 
       color: #f6f4ef;
     }
 
@@ -441,7 +441,7 @@
   <section id="cuando">
     <h2 class="detalles-titulo">Cuándo?</h2>
     <div class="gif-calendario">
-      <img src="calendario1.gif" alt="Calendario" />
+      <img src="calendario.gif" alt="Calendario" />
     </div>
   </section>
   
@@ -597,6 +597,7 @@
   </script>
 </body>
 </html>
+
 
 
 
