--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;700&display=swap" rel="stylesheet">
 
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="Iara & Imanol">
+  <meta property="og:image" content="https://iara-zurdo.com/preview.jpg">
+  <meta property="og:url" content="https://iara-zurdo.com">
+  <meta property="og:type" content="website">
+
   <style>
     /* ==============================
        TIPOGRAFÍAS
@@ -597,6 +603,7 @@
   </script>
 </body>
 </html>
+
 
 
 
